[package]
name = "rock_paper_scissors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
rand = "0.8.5"
once_cell = "1.18.0"
log = "0.4.19"
log4rs = {version = "1.2.0", features = ["gzip"]}