[package]
name = "rock_paper_scissors"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.11.0"
bevy_kira_audio = "0.16.0"
once_cell = "1.18.0"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "v7"] }
serde = "1.0.180"
serde_json = "1.0.104"